# EstudosPy

./: .gitignore  Banco de dados.txt  Pipfile  RentCar.sql  RentCarsBR.txt  requirements.txt  teste.txt
.github/workflows/: pipeline.yaml
Basico/: arrays.py  classMethod.py  classe.py  dicionarios.py  duplicados.py  getter_setter.py  lambda.py  list_comprehesion.py  map.py  palindromo.py  replace.py  sintaxe.py  slice_notation.py  split.py  terminal.py  yield.py
Basico/ClasseAbstrata/: bichos.py  tipo.py
Basico/Read_Write/: Arquivo.txt  main.py
ConfigurandoGIT/: git_configuracoes.txt
FastAPI/: FastAPI.txt  main.py
FastAPI/Alugaphone/: Diario-passos.txt
FastAPI/Alugaphone/aluga-project/: .coverage  .env.example  Dockerfile  compose.yaml  database.db  entrypoint.sh  pyproject.toml
FastAPI/Alugaphone/aluga-project/aluga_project/: app.py
FastAPI/Alugaphone/aluga-project/aluga_project/database/: database.py
FastAPI/Alugaphone/aluga-project/aluga_project/models/: models.py
FastAPI/Alugaphone/aluga-project/aluga_project/routes/: auth.py  phones.py  users.py
FastAPI/Alugaphone/aluga-project/aluga_project/schemas/: phone_schema.py  schema.py  user_schema.py
FastAPI/Alugaphone/aluga-project/aluga_project/security/: security.py
FastAPI/Alugaphone/aluga-project/aluga_project/setting/: settings.py
FastAPI/Alugaphone/aluga-project/migrations/: env.py
FastAPI/Alugaphone/aluga-project/migrations/versions/: 29f58152bb99_create_phone_stock_table.py  7c2e71fa4993_update_users_table.py  c125b57618a4_create_users_table.py
FastAPI/Alugaphone/aluga-project/tests/: conftest.py  test_database.py  test_phones.py  test_security.py  test_users.py
FastAPI/AplicandoConhecimentos/alugator_cars/: .coverage  pyproject.toml
FastAPI/AplicandoConhecimentos/alugator_cars/alugator_cars/: app.py  schemas.py
FastAPI/AplicandoConhecimentos/alugator_cars/alugator_cars/routes/: carros.py
FastAPI/AplicandoConhecimentos/alugator_cars/tests/: conftest.py  test_app.py
FastAPI/Dunossauro/fast_zero/: .coverage  database.db  fastAPI.txt  pyproject.toml  testesPytest.txt
FastAPI/Dunossauro/fast_zero/fast_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
FastAPI/Dunossauro/fast_zero/fast_zero/routes/: auth.py  usuarios.py
FastAPI/Dunossauro/fast_zero/migrations/: env.py
FastAPI/Dunossauro/fast_zero/migrations/versions/: 1b35a42eb025_create_usuarios_table.py  d2767bea46e4_create_usuarios_table.py
FastAPI/Dunossauro/fast_zero/tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_usuarios.py
FastAPI/Secao-01/: caminhos_criacao.txt  main.py  models.py
FastAPI/Secao_01/: caminhos_criacao.txt  main.py
LibSelenium/: Req.txt  Selenium.txt  cookiesGame.py  main.py  openUserData.py  requirements.txt  venv.txt
(+66 files in other folders)
