[tool.poetry]
name = "alugator-cars"
version = "0.1.0"
description = ""
authors = ["PedroElorriaga <pedrohes2002@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
taskipy = "^1.12.2"
blue = "^0.9.1"
ruff = "^0.3.5"
httpx = "^0.27.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 79
exclude = ['.env', 'migrations']


[tool.isort]
profile = "black"
line_length = 79
extend_skip = ['migrations']


[tool.pytest.ini_options]
pythonpath = "."


[tool.blue]
extend-exclude = '(migrations/)'


[tool.taskipy.tasks]
lint = 'ruff check . && blue --check . --diff && isort --check . --diff'
format = 'blue .  && isort .'
run = 'uvicorn alugator_cars.app:app --reload'
pre_test = 'task lint'
test = 'pytest -s -x --cov=alugator_cars -vv'
post_test = 'coverage html'
