[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["PedroElorriaga <pedrohes2002@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"

[tool.poetry.scripts]
read-root = 'fast_zero.app:read_root'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
